opentofu/lab-02-vpn/main.tf
resource "aws_vpc" "east" {
  cidr_block = "10.1.0.0/16"

  tags = {
    Name = "east-vpc"
  }
}

resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.east.id
  cidr_block        = "10.1.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "east-public-subnet"
  }
}

resource "aws_internet_gateway" "east" {
  vpc_id = aws_vpc.east.id

  tags = {
    Name = "east-igw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.east.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.east.id
  }

  tags = {
    Name = "east-public-rt"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
